--- a/dolteng/org.seasar.dolteng.projects/template/resources/error.html
+++ b/dolteng/org.seasar.dolteng.projects/template/resources/error.html
@@ -8,7 +8,7 @@
 <body>
 <form id="errorForm">
 <span id="allMessages"></span>
-<span id="stackTrace" te:escape="false"></span><br/>
+<span id="stackTrace"></span><br/>
 </form>
 </body>
 </html>
